--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,12 @@
 [submodule "puppet/modules/n98magerun"]
 	path = puppet/modules/n98magerun
 	url = git://github.com/cmuench/puppet-n98magerun
+[submodule "puppet/modules/redis"]
+	path = puppet/modules/redis
+	url = https://github.com/thomasvandoren/puppet-redis.git
+[submodule "puppet/modules/gcc"]
+	path = puppet/modules/gcc
+	url = https://github.com/puppetlabs/puppetlabs-gcc.git
+[submodule "puppet/modules/wget"]
+	path = puppet/modules/wget
+	url = https://github.com/maestrodev/puppet-wget.git
